# rust

./: .gitignore  .gitmodules  image_processing.code-workspace  project_example.code-workspace  workspace.code-workspace
daisy_example/: Cargo.toml
datastore/: Cargo.toml
datastore/datastorelib/: Cargo.toml
datastore/datastorelib/src/: batch.rs  datastore.rs  datastore_cfg.rs  lib.rs  storage_manager.rs  store.rs
datastore/datastorelib/tests/: batch.rs  datastore.rs  storage_manager.rs  store.rs  test_util.rs
datastore/ds-fs/: Cargo.toml
datastore/ds-fs/src/: lib.rs
datastore/ds-fs/tests/: tests.rs
datastore/ds-index/: Cargo.toml
datastore/ds-lib/: Cargo.toml
datastore/ds-lib/src/: batch.rs  lib.rs  store.rs  transaction.rs
datastore/ds-lib/src/lazy-document-tree/: mod.rs
datastore/ds-lib/tests/: batch.rs  bin-data-store.rs  datastore.rs  store.rs
datastore/ds-tools/: Cargo.toml
datastore/ds-tools/src/: main.rs
datastore/dslib/src/: batch.rs  lib.rs  store.rs
datastore/dslib/tests/: datastore.rs  store.rs  test_util.rs
datastore/dstools/: Cargo.toml
datastore/dstools/src/: app.rs  crossterm.rs  helper.rs  lib.rs  main.rs  ui.rs
datastore/dstools/tests/: helper.rs
datastore/src/: lib.rs  main.rs  storage_manager.rs
datastore/tests/: storage_manager.rs  test_util.rs
ffi/uniffilib/: Cargo.toml  build.rs
ffi/uniffilib/src/: export.udl  lib.rs
ffi/uniffilib/tests/: test.py  test_generated_bindings.rs
gtk-demo/: Cargo.toml
gtk-demo/examples/: event_loop.rs  event_loop2.rs
gtk-demo/examples/complex/: main.rs  org.gtk_rs.Todo8.gschema.xml
gtk-demo/examples/complex/resources/: resources.gresource.xml  shortcuts.ui  window.ui
gtk-demo/examples/css/: style.css
gtk-demo/examples/css/window/: window.ui
gtk-demo/src/: main.rs
icloud-sync/: Cargo.toml
icloud-sync/filescanner/: Cargo.toml
icloud-sync/filescanner/src/: lib.rs
icloud-sync/filescanner/tests/: filescanner.rs
icloud-sync/filewatcher/: Cargo.toml
icloud-sync/filewatcher/src/: filescanner.rs  lib.rs
icloud-sync/filewatcher/tests/: filescanner.rs  filewatcher.rs
icloud-sync/http/: Cargo.toml
icloud-sync/http/src/: fwmiddleware.rs  helper.rs  lib.rs  protocol.rs  request.rs  response.rs  server.rs
icloud-sync/http/tests/: fwmiddleware.rs  protocol.rs  request.rs  server.rs
icloud-sync/src/: client.rs  main.rs  srvmiddleware.rs
icloud-sync/tests/: srvmiddleware.rs
microbit-test/src/i2c/: Cargo.toml
microbit-test/src/i2c/.cargo/: config
microbit-test/src/i2c/src/: main.rs
microbit-test/src/uart/: Cargo.toml
microbit-test/src/uart/src/: main.rs
portenta-h7-workspace/: Cargo.toml  memory.x
portenta-h7-workspace/.cargo/: config.toml
portenta-h7-workspace/adc_dac/: Cargo.toml
portenta-h7-workspace/adc_dac/src/: main.rs
portenta-h7-workspace/cortex_demo/: Cargo.toml
portenta-h7-workspace/cortex_demo/src/: main.rs
portenta-h7-workspace/portenta_h7/: Cargo.toml
portenta-h7-workspace/portenta_h7/.cargo/: config.toml
portenta-h7-workspace/portenta_h7/src/: interrupt.rs  lib.rs  panic.rs  sys.rs  user_led.rs
portenta-h7-workspace/stm32h747/: Cargo.toml  device.x
portenta-h7-workspace/stm32h747/src/: ac.rs  adc3.rs  adc3_common.rs  art.rs  axi.rs  bdma.rs  can_ccu.rs  cec.rs  comp1.rs  crc.rs  crs.rs  dac.rs  dbgmcu.rs  dcmi.rs  delay_block_sdmmc1.rs  dfsdm.rs  dma1.rs  dma2d.rs  dmamux1.rs  dmamux2.rs  dsihost.rs  ethernet_mac.rs  exti.rs  fdcan1.rs  flash.rs  fmc.rs  fpu_cpacr.rs  generic.rs  gpioa.rs  hrtim_common.rs  hrtim_master.rs  hrtim_tima.rs  hrtim_timb.rs  hrtim_timc.rs  hrtim_timd.rs  hrtim_time.rs  hsem.rs  i2c1.rs  iwdg1.rs  jpeg.rs  (+38 more)
portenta-h7-workspace/stm32h747/src/ac/: abfsr.rs  ahbpcr.rs  ahbscr.rs  cacr.rs  dtcmcr.rs  itcmcr.rs
portenta-h7-workspace/stm32h747/src/adc3/: awd2cr.rs  awd3cr.rs  calfact.rs  calfact2.rs  cfgr.rs  cfgr2.rs  cr.rs  difsel.rs  dr.rs  htr2.rs  htr3.rs  ier.rs  isr.rs  jdr1.rs  jdr2.rs  jdr3.rs  jdr4.rs  jsqr.rs  lhtr1.rs  ltr1.rs  ltr2.rs  ltr3.rs  ofr1.rs  ofr2.rs  ofr3.rs  ofr4.rs  pcsel.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  sqr4.rs
portenta-h7-workspace/stm32h747/src/adc3_common/: ccr.rs  cdr.rs  cdr2.rs  csr.rs
portenta-h7-workspace/stm32h747/src/art/: ctr.rs
portenta-h7-workspace/stm32h747/src/axi/: axi_comp_id_0.rs  axi_comp_id_1.rs  axi_comp_id_2.rs  axi_comp_id_3.rs  axi_ini1_fn_mod.rs  axi_ini1_fn_mod2.rs  axi_ini1_fn_mod_ahb.rs  axi_ini1_read_qos.rs  axi_ini1_write_qos.rs  axi_ini2_fn_mod.rs  axi_ini2_read_qos.rs  axi_ini2_write_qos.rs  (+34 more)
portenta-h7-workspace/stm32h747_test/: Cargo.toml
portenta-h7-workspace/stm32h747_test/src/: main.rs
portenta-h7-workspace/usb_echo/: Cargo.toml
portenta-h7-workspace/usb_echo/src/: main.rs
rgit_auto_commit/: Cargo.toml
rgit_auto_commit/src/: auto_commit_errors.rs  cli_args.rs  commit_helper.rs  logger.rs  main.rs  push_helper.rs
rs-plotlib/: Cargo.toml
rs-plotlib/examples/: fltk.rs  statik_plot.rs
rs-plotlib/graph2img/: Cargo.toml
rs-plotlib/graph2img/src/: lib.rs
rs-plotlib/graphs/: Cargo.toml
rs-plotlib/graphs/src/: axis.rs  cartesian.rs  lib.rs
rs-plotlib/src/: image.rs  lib.rs  offline_plot.rs  plot.rs
rs-plotlib/src/fltk/: mod.rs
rs-plotlib/src/graph2img/: mod.rs
rs-plotlib/src/graphs/: axis.rs  cartesian.rs  mod.rs
rs-plotlib/tests/: image.rs  plot.rs
rs-sock/: Cargo.toml
rs-sock/examples/: client.rs  server.rs  tarpc-client.rs  tarpc-server.rs
rs-sock/rs-rpc/: Cargo.toml
rs-sock/rs-rpc/src/: lib.rs  repo.rs  rpc.rs
rs-sock/src/consumer/: mod.rs
rust-vulcan/: Cargo.toml
rust-vulcan/src/: main.rs
vulkano-test/: Cargo.toml
vulkano-test/src/: lib.rs
vulkano-test/src/pipeline/: mod.rs
vulkano-test/src/shader/: file_vertex.rs  image_fragment.rs  mod.rs  test1.vert  vertex.rs
vulkano-test/src/win/: mod.rs
vulkano-test/src/winwrapper/: mod.rs
vulkano-test/src/wrapper/: mod.rs
wgpu-test/: Cargo.toml
wgpu-test/src/: lib.rs  matrix.rs
wgpu-test/src/data_helper/: mod.rs
wgpu-test/src/matrix_helper/: mod.rs
wgpu-test/src/wgpu_helper/: computation_device.rs  mod.rs
(+2060 files in other folders)
