[package]
name = "datastore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dslib = {path="./dslib"}
serde_derive = "1.0.130"
serde = "1.0.130"
flexbuffers = "2.0.0"
rand = "0.8.4"

[workspace]
members = ["dslib"]