[package]
name = "datastore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
datastorelib = {path= "datastorelib" }
# test_util only
serde = "*"
serde_derive = "*"
serde_traitobject = "*"
rand = "*"

[workspace]
members = ["datastorelib", "dstools"]