[package]
name = "gtk-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = {version = "0.7", package = "libadwaita", features = ["v1_5"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
async-channel = "2.3.1"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_12", "v4_16"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
reqwest = "0.12.9"
