[package]
name = "icloud-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "*"
http = {path="http"}
filewatcher = {path="filewatcher"}
dirs = "*"
serde_json = "*"

[workspace]
members = ["filewatcher", "http"]
