[package]
name = "icloud-sync"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
http = {path="http"}
filewatcher = {path="filewatcher"}
dirs = "4.0.0"
serde_json = "1.0.85"
crc32fast = "1.3.2"

[workspace]
members = ["filewatcher", "http"]
