[package]
name = "rs-plotlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
fast_image_resize = "2.1.0"
fltk = "^1.2"
graph2img = {path="graph2img"}

[profile.release]
lto=true
codegen-units = 1
panic="abort"
debug=1

[workspace]
members = ["graphs", "graph2img"]