[package]
name = "rs-sock"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.3"

[dev-dependencies]
tarpc = { version = "0.34.0", features = ["full"] }
tokio = { version = "1.38.1", features = ["rt-multi-thread", "macros"] }
time = "0.3.36"
rand = "0.8.5"
futures = "0.3.30"

[workspace]
members = ["rs-rpc"]