[package]
name = "rust-vulcan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.1"
bytemuck = { version = "1.20.0", features = ["derive", "extern_crate_std", "min_const_generics"] }
vulkano-shaders = "0.34.0"
winit = "0.30.5"
vulkano-win = "0.34.0"
vulkano-util = "0.34.1"