[package]
name = "wgpu-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
env_logger = "*"
log = "*"
wgpu = "*"
bytemuck = "*"
futures-intrusive = "*"
num = "*"

[dev-dependencies]
tokio-test = "0.4.3"