[package]
name = "dstools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="*", features = ["derive"] }
crossterm = { version="*", features = ["serde"]}
tui = { version="*", default-feature=false, features = ["crossterm", "serde"]}
rand = "*"
argh = "*"
datastorelib = { path = "../datastorelib" }