[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
filewatcher = {path="../filewatcher"}
dirs = "*"
time = { version= "*", features = ["local-offset", "formatting"]}
async-std = "*"
regex = "*"