[package]
name = "http"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
serde_json = "1.0.85"
filewatcher = {path="../filewatcher"}
dirs = "4.0.0"
time = { version= "0.3.14", features = ["local-offset", "formatting"]}
async-std = "1.12.0"
regex = "1.6.0"
base64 = "0.20.0-alpha.1"