[package]
name = "cortex_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.3"

[profile.dev]
codegen-units = 1
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
panic = 'abort'
incremental = false

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false